
    - DEPRECATION: The low-level new_api methods have been deprecated
      in favor of calling new directly.  If your code uses
      new_api($api2, ...), replace it with new($api2->{'pdf'}, ...).

    - [RT #118352] Don't crash when adding an annotation to a page
      that has an existing annotations array stored as an indirect
      object (reported by Johan Vromans).


2.030     2016-10-13

    - Fix a font naming issue introduced while satisfying
      Perl::Critic.


2.029     2016-10-10

    - [RT #113293] Files with cross-reference streams weren't
      correctly setting the max object number (report and
      troubleshooting by Marco Pessotto).

    - Handle TIFF images with strips that are wider than the image
      (report and patch by Jeffrey Ratcliffe).

    - [RT #98574] Increase test coverage of PDF::API2::Content (tests
      by Phil Perry).

    - A bunch of code cleanup and documentation updates by Paul
      Cochrane.

    - Add a missing prereq on Win32 systems (patch by Michiel Beijen).

    - [RT #113514, #98552] Fix the dash() and renderingintent()
      methods in ExtGState (reported by Vadim Repin and Phil Perry).

    - Satisfy all Perl::Critic severity 5 policies.

    - [RT #117940] Allow PNG, GIF, and PNM files to be opened from
      filehandles in addition to filenames (patch by Johan Vromans).

    - [RT #33970] Fail fast when a referenced file can't be opened
      (requested by Barrie Slaymaker a mere 8.5 years ago).

    - Add -simplex, -duplexfliplongedge and -duplexflipshortedge as
      options to $pdf->preferences() (requested by Doug Poulin).


2.028     2016-06-08

    - [RT #113290] Fix for reading objects inside an object stream in
      a large PDF (patch by Marco Pessotto).

    - Eliminate an infinite loop when reading a corrupt dictionary.


2.027     2016-03-11

    - This release contains seven fixes for parsing PDFs.  They mostly
      affect files using cross-reference streams, which were first